# bayesian-ppi-medimg

./: .gitignore  README.md  change_dicom.py  cnn6570.py  histogram_posterior.py  pyproject.toml
scripts/: train_cnn_6570.py  train_cnn_all.py
src/bayesppi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bayesppi/analysis/: age_analysis.py  histogram_posterior.py
src/bayesppi/data/: change_dicom.py  process.py
src/bayesppi/inference/: coverage_interval_6570.py  coverage_interval_all.py  implementation_6570.py  implementation_all.py  prior_predictive_checks.py  simulation.py  simulation6570.py  simulation_all.py
src/bayesppi/models/: autorater.py  model_adcn.py
src/bayesppi/viz/: fig1_pipeline.py
