[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesppi"
version = "0.1.0"
description = "Bayesian Prediction-Powered Inference (PPI) with MCMC — ADCN case study"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy", "scipy", "pandas", "matplotlib",
  "pymc>=5", "arviz", "xarray",
  "scikit-learn",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
